# duckton

./: .dockerignore  .gitignore  .infisical.json  .readthedocs.yaml  404.html  CNAME  Cargo.toml  Makefile  README.md  deny.toml  index.html  mkdocs.yml  renovate.json  requirements-docs.txt  sitemap.xml  skills-lock.json
.cargo/: config.toml
.github/workflows/: docs.yml  release-app.yml
ARCHITECTURE/: index.html
BLOCKCHAIN_ECONOMICS/: index.html
HOW_IT_WORKS/: index.html
IMPROVEMENT_ROADMAP/: index.html
PRIVATE_MODE/: index.html
TESTNET/: index.html
app/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  config_store.rs  dto.rs  lib.rs  main.rs  node_manager.rs
ci/: MainDistributionPipeline.yml  README.md  ci.yml
config/: p2p.example.toml
crates/config/: Cargo.toml
crates/config/src/: antiabuse.rs  binding.rs  blocklist.rs  economics.rs  lib.rs  overrides.rs  store.rs
crates/config/tests/: example_config.rs
crates/console-server/: Cargo.toml
crates/console-server/src/: main.rs
crates/extension/: Cargo.toml
crates/extension/src/: lib.rs
crates/extension/tests/: load.rs
crates/node/: Cargo.toml
crates/node/src/: admission.rs  antiabuse.rs  canary.rs  capability_store.rs  compression.rs  coordinator.rs  datasource.rs  discovery.rs  duckdb_engine.rs  engine.rs  estimator.rs  governor.rs  input_resolver.rs  lib.rs  libp2p_discovery.rs  liveness.rs  membership.rs  node.rs  planner.rs  result_stream.rs  retry.rs  sandbox.rs  signer.rs  storage.rs  subprocess.rs  system_collect.rs  system_store.rs  worker.rs
crates/node/src/sandbox/: linux.rs  macos.rs  windows.rs
crates/node/tests/: antiabuse.rs  benches.rs  console_export.rs  discovery_libp2p.rs  e2e.rs  governor_dual_role.rs  persistent_trust.rs  planner_local.rs  planner_local_duckdb.rs  resilience.rs  sandbox.rs  scenarios.rs  scenarios_duckdb.rs  settlement_integration.rs  storage_reads_duckdb.rs  tpch_loadtest.rs  zero_config.rs
crates/proto/: Cargo.toml
crates/proto/src/: attestation.rs  capability.rs  ids.rs  input.rs  lib.rs  messages.rs  system.rs  value.rs  version.rs
crates/settlement/: Cargo.toml
crates/settlement/src/: cell.rs  engagement.rs  lib.rs  merkle.rs  mock.rs  noop.rs  quality.rs  ton.rs  ton_proof.rs  traits.rs  types.rs  wallet.rs  wiring.rs
crates/settlement/tests/: testnet_broadcast.rs  testnet_live.rs  testnet_paid_flow.rs
crates/transport/: Cargo.toml
crates/transport/src/: endpoint.rs  error.rs  identity.rs  lib.rs  verifier.rs  version.rs
crates/transport/tests/: two_node.rs  versioning.rs
crates/trust/: Cargo.toml
crates/trust/src/: antiabuse.rs  attestation.rs  canary.rs  canonical.rs  capability.rs  failure_detector.rs  lib.rs  persistent.rs  receipt.rs  reputation.rs  sealing.rs  sybil.rs  system.rs  token.rs
deploy/console-server/: Dockerfile  README.md  docker-compose.yml
deploy/vm/: Caddyfile  README.md  collector.sh  docker-compose.yml
docker/: Dockerfile  REPORT.md  SCENARIOS.md  compose.generated.yml  entrypoint.sh  gen_compose.py  run_all_scenarios.sh  run_swarm.sh  stop_swarm.sh
docker/scenarios/: 00_wait_ready.sh  01_cross_node_query.sh  02_chaos.sh  03_health.sh  04_resilience_units.sh  05_economics_modes.sh  06_settlement_units.sh  10_admin_config.sh  11_query_local.sh  12_hosting.sh  13_sandbox.sh  14_settlement_prepared.sh  20_query_remote.sh  21_antiabuse_live.sh  30_units_scenarios.sh  31_units_antiabuse.sh  32_units_sandbox.sh  33_units_transport.sh  34_units_trust.sh  35_units_resilience.sh  36_units_settlement.sh  _common.sh
docs/: ARCHITECTURE.md  BLOCKCHAIN_ECONOMICS.md  HOW_IT_WORKS.md  IMPROVEMENT_ROADMAP.md  PRIVATE_MODE.md  TESTNET.md  index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guides/: hosting-and-networks.md  node-targeting.md  paid-queries.md  running-queries.md
docs/operations/: observability.md
docs/project/: contributing.md  faq.md  security.md
docs/reference/: configuration.md  sql-functions.md
getting-started/concepts/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/hosting-and-networks/: index.html
guides/node-targeting/: index.html
guides/paid-queries/: index.html
guides/running-queries/: index.html
operations/observability/: index.html
project/contributing/: index.html
project/faq/: index.html
project/security/: index.html
reference/configuration/: index.html
reference/sql-functions/: index.html
scripts/: append_extension_metadata.py  build_extension.ps1  build_extension.sh  scenarios_testnet.sh  testnet_e2e.sh
search/: search_index.json
test/sql/: duckton.test
ton/: .env.mainnet.example  .gitignore  Acton.toml  LICENSE  README.md  SCENARIOS.md  gas-baseline.json
ton/contracts/: GlobalParams.tolk  GlobalParamsV2.tolk  JobEscrow.tolk  RecordAnchor.tolk  RecordAnchorV2.tolk  StakeReceiptWallet.tolk  StakeVault.tolk  StakeVaultV2.tolk  anchor_types.tolk  common.tolk  escrow_types.tolk  global_params_types.tolk  stake_types.tolk
ton/deployments/: readme_proof.testnet.env  upgrade_proof.testnet.env
ton/scripts/: _probe_addr.tolk  _probe_dict.tolk  _probe_hash.tolk  _probe_v2.tolk  bootstrap_mainnet_secrets.sh  deploy_anchor.tolk  deploy_escrow.tolk  deploy_global_params.tolk  deploy_stake.tolk  e2e_testnet.tolk  fee_proof_testnet.tolk  init_node_wallet.tolk  payout_nodes_testnet.tolk  read_state_testnet.tolk  scenarios_testnet.tolk  show_anchor.tolk  show_duckton.tolk  stake_op_testnet.tolk  upgrade_global_params.tolk
ton/tests/: anchor.test.tolk  e2e_flow.test.tolk  escrow.test.tolk  fork_testnet.test.tolk  fuzz.test.tolk  global_params.test.tolk  receipt_wallet.test.tolk  stake.test.tolk  upgrade.test.tolk
ton/wrappers/: GlobalParams.gen.tolk  (+7 more)
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  wrangler.jsonc
(+94 files in other folders)
