[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/proto",
    "crates/transport",
    "crates/trust",
    "crates/settlement",
    "crates/node",
    "crates/extension",
    "crates/console-server",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
# Duckton — a peer-to-peer DuckDB query grid with TON-settled economics. The
# published loadable extension is `duckton`; internal crate names stay `p2p-*`.
description = "Duckton — a peer-to-peer DuckDB query grid settled on TON."
license = "Apache-2.0"
repository = "https://github.com/example/duckdb-p2p"
rust-version = "1.80"

[profile.release]
opt-level = 2
# Strip debug symbols to reduce binary size in production images.
strip = "symbols"
# Enable overflow checks in release builds: this codebase includes
# crypto/settlement arithmetic where silent integer wrapping would be
# a security bug (e.g. amount calculations, stake factor, proof indices).
overflow-checks = true
