[workspace]
resolver = "2"
members = [
    "crates/config",
    "crates/proto",
    "crates/transport",
    "crates/trust",
    "crates/settlement",
    "crates/node",
    "crates/extension",
    "crates/console-server",
]
# The published deliverable of this workspace is the `duckton` loadable DuckDB
# extension (`crates/extension`). The DuckDB Community Extensions registry build
# (`extension-ci-tools`) runs a bare `cargo build` at the repo root, so scope the
# DEFAULT build set to just the extension and its path-deps. This keeps the
# registry build from pulling `console-server`'s `duckdb-engine` feature into the
# cdylib via feature unification (which would bundle a SECOND DuckDB and break the
# loadable-extension bindings). Explicit `cargo build --workspace` / `-p` (used by
# docker + scripts/build_extension.sh + CI) are unaffected and still build all.
default-members = ["crates/extension"]

[workspace.package]
version = "0.2.1"
edition = "2021"
# Duckton — a peer-to-peer DuckDB query grid with TON-settled economics. The
# published loadable extension is `duckton`; internal crate names stay `p2p-*`.
description = "Duckton — a peer-to-peer DuckDB query grid settled on TON."
license = "Apache-2.0"
repository = "https://github.com/Angelerator/duckton"
rust-version = "1.80"

[profile.release]
opt-level = 2
# Strip debug symbols to reduce binary size in production images.
strip = "symbols"
# Enable overflow checks in release builds: this codebase includes
# crypto/settlement arithmetic where silent integer wrapping would be
# a security bug (e.g. amount calculations, stake factor, proof indices).
overflow-checks = true
