[package]
name = "p2p-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "p2p_config"
path = "src/lib.rs"

[dependencies]
p2p-proto = { version = "0.2.0", path = "../proto" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
