[package]
name = "p2p-extension"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "duckton"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# `loadable-extension` builds against the stable DuckDB **C extension API**
# (the API pointer is supplied at LOAD time), so we do not link/compile the whole
# engine into the cdylib.
duckdb = { version = "1.10504.0", default-features = false, features = ["loadable-extension"] }
duckdb-loadable-macros = "1.10504.0"
p2p-config = { version = "0.5.2", path = "../config" }
p2p-proto = { version = "0.5.2", path = "../proto" }
p2p-settlement = { version = "0.5.2", path = "../settlement" }
p2p-trust = { version = "0.5.2", path = "../trust" }
# The distributed grid core. We deliberately disable default features so the
# cdylib does NOT pull in libp2p (Kademlia/gossip) — `Node::auto` only needs the
# static/in-memory discovery — and does NOT enable the node's `duckdb-engine`
# feature (which would bundle a SECOND DuckDB and conflict with this crate's
# `loadable-extension` bindings). The extension supplies its own `QueryEngine`
# that runs SQL through the host DuckDB's C API (see `HostEngine` in `lib.rs`).
p2p-node = { version = "0.5.2", path = "../node", default-features = false }
# Synchronous DuckDB C-API <-> async tokio node bridge: one managed runtime,
# `block_on` per call.
tokio = { version = "1.52.3", default-features = false, features = ["rt", "rt-multi-thread", "net", "time"] }
async-trait = "0.1.89"
# For persisting array-valued runtime settings (host data classes / bootstrap
# seeds) via `ConfigStore::set`, which the friendly grouped setters don't cover.
toml = "1.1.2"
# Per-job private (0700) ephemeral temp/spill directory for the in-process
# `HostEngine`, matching the node's strict `DuckDbEngine`.
tempfile = "3.27.0"

[features]
# Enable real on-chain broadcasting from the SQL admin/stake surfaces
# (`p2p_stake`/`p2p_unstake`/`p2p_admin_params`). Off by default: those calls
# stay "prepared" (no network). Turning it on pulls the live toncenter client
# (curl transport) from `p2p-settlement`.
ton-live = ["p2p-settlement/ton-live"]
