[package]
name = "p2p-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "p2p_node"
path = "src/lib.rs"

# Sandboxed per-job child executor (opt-in process-per-job, G1/G8). Compiles in
# every build (a no-op stub without `duckdb-engine`); the functional executor
# needs the bundled DuckDB engine feature.
[[bin]]
name = "p2p-job-exec"
path = "src/bin/p2p_job_exec.rs"

[features]
default = ["discovery-libp2p"]
# Real locked-down DuckDB execution engine (bundles + compiles DuckDB from
# source). Off by default so the protocol/trust tests build fast with the mock.
# Pulls in `tempfile` for the per-job private (0700) temp/spill directory.
duckdb-engine = ["dep:duckdb", "dep:tempfile"]
# Real libp2p (Kademlia DHT + gossipsub) cross-swarm discovery propagation.
# On by default; disable with `--no-default-features` for a slim build that uses
# only the static / in-memory `Discovery` impls.
discovery-libp2p = ["dep:libp2p"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
blake3 = "1.8.5"
duckdb = { version = "1.10503.1", features = ["bundled", "parquet", "json"], optional = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3.32"
hex = "0.4.3"
lz4_flex = { version = "0.11.3", default-features = false, features = ["std"] }
zstd = "0.13.2"
p2p-config = { version = "0.4.0", path = "../config" }
p2p-proto = { version = "0.4.0", path = "../proto" }
p2p-settlement = { version = "0.4.0", path = "../settlement" }
p2p-transport = { version = "0.4.0", path = "../transport" }
p2p-trust = { version = "0.4.0", path = "../trust" }
# QUIC error codes (`VarInt`) for abruptly RESETting loser/stalled dispatch
# streams. Pinned to the same version `p2p-transport` uses so the `SendStream`/
# `RecvStream` types (re-exported from there) and our `VarInt` are identical.
quinn = "0.11.9"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# Per-job private (0700) temp/spill directory for the real DuckDB engine. Only
# pulled in by the `duckdb-engine` feature (also a dev-dependency for tests).
tempfile = { version = "3.27.0", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
libp2p = { version = "0.56.0", default-features = false, features = ["tcp", "quic", "tokio", "noise", "yamux", "gossipsub", "kad", "identify", "autonat", "dcutr", "relay", "mdns", "macros"], optional = true }
# Non-GDPR system-metadata capture (`system_collect.rs`): only the `system`
# (CPU/RAM/OS) + `disk` probes are needed; default features (network/component/
# user enumeration) are disabled to keep the surface minimal.
sysinfo = { version = "0.39.3", default-features = false, features = ["system", "disk"] }

# OS-level sandbox resource enforcement. Unix uses POSIX `setrlimit` (libc);
# Windows uses Job Objects (windows-sys). Both are target-gated so neither is
# compiled — nor required — on the other family's builds (degrades to a no-op
# sandbox elsewhere). The pure policy/profile builders are platform-independent.
[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.27.0"
