[package]
name = "p2p-trust"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "p2p_trust"
path = "src/lib.rs"

[dependencies]
blake3 = "1.8.5"
chacha20poly1305 = "0.10"
# `zeroize` scrubs secret-key material on drop (defense-in-depth for the
# memory-disclosure tier). Feature unification turns it on for the whole graph.
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "zeroize"] }
hex = "0.4.3"
p2p-config = { version = "0.6.2", path = "../config" }
p2p-proto = { version = "0.6.2", path = "../proto" }
rand = "0.8"
redb = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
x25519-dalek = { version = "2", features = ["getrandom", "static_secrets"] }
